--- a/index.html
+++ b/index.html
@@ -32,17 +32,15 @@
                 <p>Seg</p>
             </div>
         </div>
-        </div>
     </header>
 
-
-    <section id="frase" class="section section-frase fade-left">
+    <section id="frase" class="section fade-left">
         <blockquote class="frase-evento">
             "Los sueños están hechos de magia... y los 15 de ilusiones."
         </blockquote>
     </section>
 
-    <section id="galeria" class="seccion">
+    <section id="galeria" class="section fade-up">
         <div class="contenedor-galeria">
             <h2>Un vistazo a mi mundo</h2>
             <div class="carrusel">
@@ -55,7 +53,7 @@
         </div>
     </section>
 
-    <section id="evento" class="section section-evento fade-up">
+    <section id="evento" class="section fade-up">
         <h2>Detalles del Evento</h2>
         <div class="evento-cards">
             <div class="evento-card fade-right">
@@ -86,7 +84,7 @@
     <section id="confirmacion" class="section fade-up">
         <h2>Confirmar Asistencia</h2>
         <div class="form-card">
-            <form action="#" method="POST">
+            <form id="form-confirmacion">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" placeholder="Tu nombre completo" required />
                 <label for="asistencia">¿Asistirás?</label>
