--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </footer>
 
     <audio id="musica-fondo" loop>
-        <source src="./Bruno Mars - Marry You (LyricsVietsub).mp3" type="audio/mp3">
+        <source src="./Memories (Instrumental).mp3" type="audio/mp3">
         Tu navegador no soporta el elemento de audio.
     </audio>
 
